--- a/boufetapp/templates/inicio.html
+++ b/boufetapp/templates/inicio.html
@@ -37,7 +37,7 @@ function myFunction1() {
 
 <body>
 
-<title>Boufet</title>
+<title>Buffet</title>
 
 <img class="titulo" src="static/images/logo.png"></img>
 
@@ -76,24 +76,15 @@ function myFunction1() {
 
 
 <div class="btn-group2">
-  <button type="button" class="btn btn-primary dropdown-toggle"
-          data-toggle="dropdown">
-    Aula <span class="caret"></span>
-  </button>
-  <ul class="dropdown-menu" role="menu">
-    <h6 style="text-align: center;">Primer piso</h6>
-    <li role="Piso" class="divider"></li>
-    <li><a href="#">A</a></li>
-    <li><a href="#">B</a></li>
-    <li><a href="#">C</a></li>
-    <li role="Piso" class="divider"></li>
-    <h6 style="text-align: center;">Segundo piso</h6>
-    <li role="Piso" class="divider"></li>
-    <li><a href="#">A</a></li>
-    <li><a href="#">B</a></li>
-    <li><a href="#">C</a></li>
-  </ul>
+<select type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+  <option value="A">A</option>
+  <option value="B">B</option>
+  <option value="C">C</option>
+  <option value="D">D</option>
+</select>
 </div>
+
+
 
 <h5 class="aclaracion2">Seleccione en el aula en la que se encuentra</h5>
 
