--- a/boufetapp/static/styles/home.css
+++ b/boufetapp/static/styles/home.css
@@ -35,6 +35,8 @@ height:50px;
 		0 0 0.2em #87F
 }
 
+
+/*Texto del boton seleccionar horario*/
 .aclaracion1{
     position: relative;
     left: 790px;
@@ -47,9 +49,10 @@ height:50px;
     top: 110px;
 }
 
+/*Texto del boton seleccionar aula*/
 .aclaracion2{
     position: relative;
-    left: 790px;
+    left: 770px;
     top: 80px;
 }
 
