--- a/boufetapp/templates/inicio.html
+++ b/boufetapp/templates/inicio.html
@@ -84,7 +84,14 @@ function myFunction1() {
 </select>
 </div>
 
+<div class="checkboxpiso">
 
+<form action="">
+<input type="checkbox" name="piso" value="Planta baja">Planta baja<br>
+<input type="checkbox" name="piso" value="Planta alta">Planta alta
+</form>
+
+</div>
 
 <h5 class="aclaracion2">Seleccione en el aula en la que se encuentra</h5>
 
