--- a/boufetapp/static/styles/home.css
+++ b/boufetapp/static/styles/home.css
@@ -53,7 +53,7 @@ height:50px;
 .aclaracion2{
     position: relative;
     left: 770px;
-    top: 80px;
+    top: 40px;
 }
 
 .nomap{
@@ -77,4 +77,10 @@ height:50px;
 
 body {
   background-color:#58FAF4;
+}
+
+.checkboxpiso{
+    position: relative;
+    left: 700px;
+    top: 120px;
 }
