--- a/boufetapp/static/styles/home.css
+++ b/boufetapp/static/styles/home.css
@@ -1,7 +1,7 @@
 .scrollbox{
     position: relative;
     left: 70px;
-    top: -200px;
+    top: -350px;
 }
 
 .totalp{
@@ -29,7 +29,7 @@ height:50px;
 
 .h1{
     position: relative;
-    top: 30px;
+    top: 70px;
     left: 70px;
     text-shadow: 0 0 0.2em #87F, 0 0 0.2em #87F,
 		0 0 0.2em #87F
@@ -53,19 +53,19 @@ height:50px;
 .aclaracion2{
     position: relative;
     left: 770px;
-    top: 40px;
+    top: 15px;
 }
 
-.nomap{
+.nombreapellido{
     position: relative;
     left: 710px;
-    top: 205px;
+    top: 160px;
 }
 
 .enviar{
     position: relative;
     left: 450px;
-    top: 150px;
+    top: 60px;
 }
 
 .titulo{
@@ -79,7 +79,7 @@ body {
   background-color:#58FAF4;
 }
 
-.checkboxpiso{
+.radiuspiso{
     position: relative;
     left: 700px;
     top: 120px;
